[package]
	categories = ["encoding", "graphics", "multimedia"]
	description = "The collage generator"
	documentation = "https://docs.rs/collagen"
	edition = "2021"
	keywords = ["image", "graphics", "multimedia", "svg"]
	license-file = "LICENSE"
	name = "collagen"
	readme = "docs/readme-docsrs.md"
	repository = "https://github.com/rben01/collagen"
	rust-version = "1.80"
	version = "0.8.0"

[dependencies]
	base64 = "0.22"
	clap = { version = "4.5", features = ["derive"] }
	compact_str = { version = "0.8", features = ["serde"] }
	jsonnet-rs = "0.6"
	nom = "7.1"
	notify = "6.1"
	notify-debouncer-full = "0.3"
	quick-xml = "0.36"
	regex = "1.11"
	serde = { version = "1.0", features = ["derive"] }
	serde_json = "1.0"
	serde_test = "1.0"
	strum = "0.26"
	strum_macros = "0.26"
	tempfile = "3.13"
	thiserror = "2.0"
	zip = "2.2"

[features]
	_any_bundled_font = []
	bundled_fonts = ["font_impact", "_any_bundled_font"]
	font_impact = ["_any_bundled_font"]

[[bin]]
	name = "clgn"
	path = "src/main.rs"
