[package]
	categories = ["encoding", "graphics", "multimedia"]
	description = "The collage generator"
	documentation = "https://docs.rs/collagen"
	edition = "2021"
	keywords = ["image", "graphics", "multimedia", "svg"]
	license = "MIT"
	name = "collagen"
	readme = "docs/readme-docsrs.md"
	repository = "https://github.com/rben01/collagen"
	rust-version = "1.80"
	version = "0.9.4"

[dependencies]
	base64 = "0.22"
	clap = { version = "4.5", features = ["derive"] }
	compact_str = { version = "0.9", features = ["serde"] }
	jsonnet-rs-docsrs-build = { version = "0.18" }
	notify = "8.0"
	notify-debouncer-full = "0.5"
	quick-xml = "0.37"
	regex = "1.11"
	serde = { version = "1.0", features = ["derive"] }
	serde_json = "1.0"
	strum = { version = "0.27", features = ["derive"] }
	thiserror = "2.0"
	zip = "4.0"

[dev-dependencies]
	tempfile = "3.13"

[features]
	_any_bundled_font = []
	bundled_fonts = ["font_impact", "_any_bundled_font"]
	font_impact = ["_any_bundled_font"]

[[bin]]
	name = "clgn"
	path = "src/main.rs"
