[package]
	categories = ["encoding", "graphics", "multimedia"]
	description = "The collage generator"
	documentation = "https://docs.rs/collagen"
	edition = "2021"
	keywords = ["image", "graphics", "multimedia", "svg"]
	license = "MIT"
	name = "collagen"
	readme = "docs/readme-docsrs.md"
	repository = "https://github.com/rben01/collagen"
	rust-version = "1.80"
	version = "0.9.5"

[dependencies]
	base64 = "0.22"
	clap = { version = "4.5", features = ["derive"], optional = true }
	compact_str = { version = "0.9", features = ["serde"] }
	jsonnet-rs-docsrs-build = { version = "0.18", optional = true }
	notify = { version = "8.0", optional = true }
	notify-debouncer-full = { version = "0.5", optional = true }
	quick-xml = "0.37"
	regex = "1.11"
	serde = { version = "1.0", features = ["derive"] }
	serde_json = "1.0"
	strum = { version = "0.27", features = ["derive"] }
	thiserror = "2.0"
	zip = { version = "4.0", optional = true }

	# WASM dependencies
	console_error_panic_hook = { version = "0.1", optional = true }
	js-sys = { version = "0.3", optional = true }
	wasm-bindgen = { version = "0.2", optional = true }
	wasm-bindgen-futures = { version = "0.4", optional = true }
	web-sys = { version = "0.3", features = [
		"console",
		"File",
		"FileList",
		"Blob",
	], optional = true }

[dev-dependencies]
	tempfile = "3.13"

[features]
	default = ["cli", "jsonnet", "wasm"]

	_any_bundled_font = []
	bundled_fonts = ["font_impact", "_any_bundled_font"]
	cli = ["clap", "notify", "notify-debouncer-full", "jsonnet", "zip"]
	font_impact = ["_any_bundled_font"]
	jsonnet = ["jsonnet-rs-docsrs-build"]
	wasm = [
		"wasm-bindgen",
		"wasm-bindgen-futures",
		"js-sys",
		"web-sys",
		"console_error_panic_hook",
	]

[[bin]]
	name = "clgn"
	path = "src/main.rs"
	required-features = ["cli"]
